--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "types": ["leaflet", "leaflet-draw","geojson", "google.maps",  "googlemaps"],
+    "typeRoots": ["node_modules/@types"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
