--- a/angular.json
+++ b/angular.json
@@ -40,12 +40,10 @@
               "node_modules/leaflet-draw/dist/leaflet.draw.css",
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": [
+                  "node_modules/leaflet/dist/leaflet.js",
+                   "node_modules/leaflet-draw/dist/leaflet.draw.js"
+            ]
           },
           "configurations": {
             "production": {
