--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:bungalow-app": "node dist/bungalow-app/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -22,15 +20,12 @@
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/platform-server": "^18.2.13",
     "@angular/router": "^18.2.13",
-    "@angular/ssr": "^18.2.12",
     "@asymmetrik/ngx-leaflet": "^18.0.1",
     "dayjs": "^1.11.13",
-    "express": "^4.18.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "moment": "^2.30.1",
     "ngx-daterangepicker-material": "^6.0.4",
-    "ol": "^10.2.1",
     "osm": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -41,7 +36,9 @@
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.13",
-    "@types/express": "^4.17.17",
+    "@types/geojson": "^7946.0.14",
+    "@types/google.maps": "^3.58.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.14",
     "@types/leaflet-draw": "^1.0.11",
