--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jasmine", "leaflet", "leaflet-draw","geojson",  "googlemaps", "google.maps"
     ]
   },
   "include": [
