--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet-draw": "^1.0.4",
     "moment": "^2.30.1",
     "ngx-daterangepicker-material": "^6.0.4",
+    "ngx-ui-loader": "^13.0.0",
     "osm": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -41,7 +42,7 @@
     "@types/google.maps": "^3.58.1",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~5.1.0",
-    "@types/leaflet": "^1.9.14",
+    "@types/leaflet": "^1.9.15",
     "@types/leaflet-draw": "^1.0.11",
     "@types/node": "^18.19.63",
     "jasmine-core": "~5.1.0",
