--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.15",
     "@types/leaflet-draw": "^1.0.11",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.19.63",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
