--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-server": "^18.2.13",
     "@angular/router": "^18.2.13",
     "@asymmetrik/ngx-leaflet": "^18.0.1",
+    "apexcharts": "^4.3.0",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "moment": "^2.30.1",
+    "ng-apexcharts": "^1.15.0",
     "ngx-daterangepicker-material": "^6.0.4",
     "ngx-ui-loader": "^13.0.0",
     "osm": "^1.0.0",
@@ -55,5 +57,14 @@
     "tailwindcss": "^3.4.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "overrides": {
+    "ng-apexcharts": {
+      "@angular/common": ">17.0.2",
+      "@angular/core": ">17.0.2"
+    },
+    "ngx-daterangepicker-material": {
+       "dayjs": "1.11.4"
+    }
   }
 }
