--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "dayjs-plugin-utc": "^0.1.2",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "martinez-polygon-clipping": "^0.7.4",
     "moment": "^2.30.1",
     "ng-apexcharts": "^1.15.0",
     "ngx-daterangepicker-material": "^6.0.4",
+    "ngx-socket-io": "^4.7.0",
     "ngx-ui-loader": "^13.0.0",
     "osm": "^1.0.0",
     "rxjs": "~7.8.0",
