--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^18.2.13",
     "@angular/router": "^18.2.13",
     "@asymmetrik/ngx-leaflet": "^18.0.1",
+    "@turf/turf": "^7.2.0",
     "apexcharts": "^4.3.0",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
