--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-server": "^18.2.13",
     "@angular/router": "^18.2.13",
     "@asymmetrik/ngx-leaflet": "^18.0.1",
+    "@meddv/ngx-pinch-zoom": "^18.0.1",
     "@turf/turf": "^7.2.0",
     "apexcharts": "^4.3.0",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
+    "interactjs": "^1.10.27",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "martinez-polygon-clipping": "^0.7.4",
@@ -33,10 +35,12 @@
     "moment-timezone": "^0.5.46",
     "ng-apexcharts": "^1.15.0",
     "ngx-daterangepicker-material": "^6.0.4",
+    "ngx-panzoom": "^19.0.0",
     "ngx-socket-io": "^4.7.0",
     "ngx-ui-loader": "^13.0.0",
     "osm": "^1.0.0",
     "rxjs": "~7.8.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tslib": "^2.3.0",
     "typescript": "^5.5.4",
     "tz-lookup": "^6.1.25",
