--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ng-apexcharts": "^1.15.0",
     "ngx-daterangepicker-material": "^6.0.4",
     "ngx-panzoom": "^19.0.0",
-    "ngx-socket-io": "^4.7.0",
+    "ngx-socket-io": "4.7.0",
     "ngx-ui-loader": "^13.0.0",
     "osm": "^1.0.0",
     "rxjs": "~7.8.0",
